--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Publish to NPM
 
 on: 
   release:
@@ -19,40 +19,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        registry-url: 'https://registry.npmjs.org'
     - run: npm install
     - run: npx eslint ./js/
-    - run: npm run start:git
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-          args: --acl public-read --follow-symlinks --delete --exclude '*.js.br' --exclude '*.js.gz'
+    - run: npm run pubDist
       env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-2' 
-          SOURCE_DIR: 'dist' 
-          DEST_DIR: 'dist'
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-          args: --acl public-read --exclude '*' --include '*.js.gz' --content-encoding 'gzip' --content-type 'application/javascript'
-      env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-2' 
-          SOURCE_DIR: 'dist' 
-          DEST_DIR: 'dist'
-    - uses: jakejarvis/s3-sync-action@master
-      with:
-          args: --acl public-read --exclude '*' --include '*.js.br' --content-encoding 'br' --content-type 'application/javascript'
-      env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-west-2' 
-          SOURCE_DIR: 'dist' 
-          DEST_DIR: 'dist'
+	NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+           
 
 
 
