--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "repileux",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Yet another app builder using Redux and react-router.",
   "private": false,
   "scripts": {
-    "test": "NODE_DEBUG=logger jest",
+    "test": "npx eslint ./js && NODE_DEBUG=logger jest",
     "start:dev": "webpack-dev-server -w --demo --env.NODE_ENV=development",
     "start:demo": "webpack --mode=production --demo --env.NODE_ENV=production",
     "start:git": "webpack --mode=production --env.NODE_ENV=production",
@@ -70,7 +70,9 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "react-dom": "^16.12.0",
+    "react": "^16.4.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -82,14 +84,16 @@
     "immutability-helper": "^3.0.1",
     "immutable": "^4.0.0-rc.12",
     "@reduxjs/toolkit": "^1.2.2",
-    "react": "^16.4.0",
     "react-document-meta": "^3.0.0-beta.2",
-    "react-dom": "^16.12.0",
     "react-visibility-sensor": "^5.1.1",
-    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
+    "react-redux": "^7.1.3",
     "seamless-immutable": "^7.1.3",
     "supports-webp-sync": "^1.0.0"
+  },
+  "peerDependencies" : {
+    "react-dom": "^16.12.0",
+    "react": "^16.4.0"
   }
 }
