--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "repileux",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Yet another app builder using Redux and react-router.",
   "private": false,
   "scripts": {
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "@types/jest": "^26.0.13",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -72,28 +73,32 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0",
     "react-dom": "^16.12.0",
-    "react": "^16.4.0"
+    "react": "^16.4.0",
+    "redux": "^4.0.5",
+    "react-router": "^5.1.2",
+    "react-redux": "^7.1.3",
+    "@reduxjs/toolkit": "^1.2.2",
+    "connected-react-router": "^6.7.0",
+    "react-document-meta": "^3.0.0-beta.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@types/jest": "^26.0.13",
-    "connected-react-router": "^6.7.0",
     "immutability-helper": "^3.0.1",
     "immutable": "^4.0.0-rc.12",
-    "@reduxjs/toolkit": "^1.2.2",
-    "react-document-meta": "^3.0.0-beta.2",
-    "react-visibility-sensor": "^5.1.1",
-    "react-router": "^5.1.2",
-    "redux": "^4.0.5",
-    "react-redux": "^7.1.3",
     "seamless-immutable": "^7.1.3",
     "supports-webp-sync": "^1.0.0"
   },
-  "peerDependencies" : {
-    "react-dom": "^16.12.0",
-    "react": "^16.4.0"
+  "peerDependencies": {
+    "react-dom": "^16.13.1",
+    "react": "^16.13.1",
+    "redux": "^4.0.5",
+    "react-router": "^5.1.2",
+    "react-redux": "^7.1.3",
+    "@reduxjs/toolkit": "^1.2.2",
+    "connected-react-router": "^6.7.0",
+    "react-document-meta": "^3.0.0-beta.2"
   }
 }
