--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "repileux",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Yet another app builder using Redux and react-router.",
   "private": false,
   "scripts": {
@@ -73,13 +73,7 @@
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0",
     "react-dom": "^16.13.1",
-    "react": "^16.13.1",
-    "redux": "^4.0.5",
-    "react-router": "^5.1.2",
-    "react-redux": "^7.1.3",
-    "@reduxjs/toolkit": "^1.2.2",
-    "connected-react-router": "^6.7.0",
-    "react-document-meta": "^3.0.0-beta.2"
+    "react": "^16.13.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -89,16 +83,16 @@
     "immutability-helper": "^3.0.1",
     "immutable": "^4.0.0-rc.12",
     "seamless-immutable": "^7.1.3",
-    "supports-webp-sync": "^1.0.0"
-  },
-  "peerDependencies": {
-    "react-dom": "^16.13.1",
-    "react": "^16.13.1",
+    "supports-webp-sync": "^1.0.0",
     "redux": "^4.0.5",
     "react-router": "^5.1.2",
     "react-redux": "^7.1.3",
     "@reduxjs/toolkit": "^1.2.2",
     "connected-react-router": "^6.7.0",
     "react-document-meta": "^3.0.0-beta.2"
+  },
+  "peerDependencies": {
+    "react-dom": "^16.13.1",
+    "react": "^16.13.1"
   }
 }
