--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "repileux",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "Yet another app builder using Redux and react-router.",
   "private": false,
   "scripts": {
     "test": "npx eslint ./js && NODE_DEBUG=logger jest",
     "start:dev": "webpack-dev-server -w --demo --env.NODE_ENV=development",
     "start:demo": "webpack --mode=production --demo --env.NODE_ENV=production",
-    "start:git": "webpack --mode=production --env.NODE_ENV=production",
-    "pubDist": "rm -rf dist/* && npm run test && npm run start:git && cp ./package.json dist  && cp ./README.md dist && cd dist && npm publish",
-    "pubDistDry": "rm -rf dist/* && npm run test && npm run start:git && cp ./package.json dist  && cp ./README.md dist && cd dist && npm publish --dry-run"
+    "start:git": "webpack --mode=development --env.NODE_ENV=development",
+    "pubDist": "rm -rf dist/* && npm run test && npm run start:git && cp ./package.json dist  && cp ./README.md dist && npx tsc && cd dist && npm publish",
+    "pubDistDry": "rm -rf dist/* && npm run test && npm run start:git && cp ./package.json dist  && cp ./README.md dist && npx tsc && cd dist && npm publish --dry-run"
   },
   "main": "./index.js",
+  "types": "./index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/JFL110/repileux"
@@ -46,9 +47,9 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@types/jest": "^26.0.13",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "@types/jest": "^26.0.13",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -63,17 +64,18 @@
     "jsdom": "^16.4.0",
     "minify-html-webpack-plugin": "^1.0.0",
     "node-libs-browser": "^2.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "sitemap-webpack-plugin": "^0.8.1",
     "style-loader": "^1.2.1",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "react-dom": "^16.13.1",
-    "react": "^16.13.1"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
